# Superpoint_Android

./: .gitignore  CMakeLists.txt  README.md  coco_pretrained.param  compile.sh  superpoint_ncnn.cpp  timer.h
include/opencv/opencv2/: cvconfig.h  opencv_modules.hpp
include/snpe/: LoadInputTensor.hpp  LoadUDOPackage.hpp
superpoint_NCNN/: CMakeLists.txt  compile.sh  main.cpp  push.sh  superpoint.cpp  superpoint.h  test.cpp
superpoint_NCNN/ncnn/include/: layer_declaration.h  layer_registry.h  platform.h
superpoint_SNPE/: .~lock.test_result.ods#  CMakeLists.txt  compile.sh  main.cpp  numeric_types.h  push.sh  superpoint.cpp  superpoint.h  test_result.ods  timer.cpp
superpoint_SNPE/snpe/include/: CreateGLBuffer.hpp  SaveOutputTensor.hpp
superpoint_SNPE/snpe/utils/: CheckRuntime.cpp  CreateGLBuffer.cpp  CreateGLContext.cpp  CreateUserBuffer.cpp  LoadInputTensor.cpp  LoadUDOPackage.cpp  PreprocessInput.cpp  SaveOutputTensor.cpp  SetBuilderOptions.cpp  Util.cpp
superpoint_class/: CMakeLists.txt  compile.sh  push.sh  superpoint.cpp  superpoint.h  test.cpp
test_img/i_pool/: 1.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm
